--- a/PMSystem/app/views/welcome/index.html.erb
+++ b/PMSystem/app/views/welcome/index.html.erb
@@ -20,7 +20,7 @@
 
   <button class="tablinks" onclick="window.location='record'">Placement Record</button>
  
-  <button class="tablinks" onclick="window.location='recr'">Recruiters</button>
+  <button class="tablinks" onclick="window.location='/addadmin/new'">Recruiters</button>
    
   <button class="tablinks" onclick="window.location='contact'">Contact Us</button>
 
