--- a/PMSystem/app/views/rregister/_form.html.erb
+++ b/PMSystem/app/views/rregister/_form.html.erb
@@ -26,7 +26,7 @@
 			
 				<p>
 					<%= label_tag :mail_id %><br>
-					<%= text_field_tag :mail %>
+					<%= email_field_tag :mail %>
 				</p>
 
 				<p>
