--- a/PMSystem/app/assets/stylesheets/style.css
+++ b/PMSystem/app/assets/stylesheets/style.css
@@ -5,7 +5,7 @@ body {
 	font-family: 'Lato', sans-serif;
 	font-weight: 300;
 	margin: 0;
-	color: #666;
+	color: #e52907;
 }
 /* Style the tab */
 div.tab {
