--- a/PMSystem/app/views/login/contact.html.erb
+++ b/PMSystem/app/views/login/contact.html.erb
@@ -8,9 +8,9 @@
 	<!-- Google Fonts -->
 	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700|Lato:400,100,300,700,900' rel='stylesheet' type='text/css'>
 
-	<link rel="stylesheet" href="css/animate.css">
+	<link rel="stylesheet" href="stylesheets/animate.css">
 	<!-- Custom Stylesheet -->
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="stylesheets/style.css">
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
@@ -35,7 +35,7 @@
 <body>
 	<div class="container">
 		<div class="top">
-			<h1 id="title" class="hidden"><span id="logo">Placementer</span></span></h1>
+			<h1 id="title" class="hidden"><span id="logo">Placementor</span></span></h1>
 		</div>
 		<!--div class="login-box animated fadeInUp">
 			<div class="box-header">
