--- a/PMSystem/app/views/login/rhome.html.erb
+++ b/PMSystem/app/views/login/rhome.html.erb
@@ -3,14 +3,14 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>placementer</title>
+	<title>placementor</title>
 
 	<!-- Google Fonts -->
 	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700|Lato:400,100,300,700,900' rel='stylesheet' type='text/css'>
 
-	<link rel="stylesheet" href="animate.css">
+	<link rel="stylesheet" href="stylesheets/animate.css">
 	<!-- Custom Stylesheet -->
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="stylesheets/style.css">
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
@@ -18,15 +18,15 @@
  
   <button class="tablinks" onclick="window.location='/'">Home</button>
 
-  <button class="tablinks" onclick="window.location='record'">Placement Record</button>
+  <button class="tablinks" onclick="window.location='record'">Placement record</button>
  
-  <button class="tablinks" onclick="window.location='recr'">Recruiters</button>
+  <button class="tablinks" onclick="window.location='recr'">recruiters</button>
    
-  <button class="tablinks" onclick="window.location='contact'">Contact Us</button>
+  <button class="tablinks" onclick="window.location='contact'">Message</button>
 
-  <button class="tablinks" onclick="window.location='login'">Login</button>
+  <button class="tablinks" onclick="window.location='logout'">Logout</button>
 </div>
-<div>
+<!--div>
 <!--p class="sign_in"><%#= link_to "Admin Login", new_user_session_path %>
 
 
@@ -52,6 +52,34 @@
 			<button type="submit">Sign In</button>
 			<br/>
 			<a href="#"><p class="small">Forgot your password?</p></a>
+		</div-->
+	</div>
+		<div>
+			<center>
+				<p>
+  					<strong>CIN Number:</strong>
+  					<%= @rec.cinno %>
+				</p>
+				<p>
+  					<strong>Company:</strong>
+  					<%= @rec.company %>
+				</p>
+				<p>
+  					<strong>Name:</strong>
+  					<%= @rec.name %>
+				</p>
+				<p>
+  					<strong>link:</strong>
+  					<%= @rec.link %>
+				</p>
+				<p>
+  					<strong>Phone:</strong>
+  					<%= @rec.cno %>
+				</p>
+				<p>
+  					<strong>Email Id:</strong>
+  					<%= @rec.mail %>
+				</p>
+			</center>
 		</div>
-	</div-->
 </body>
