Manage user completed

--- a/PMSystem/app/views/login/p_records.html.erb
+++ b/PMSystem/app/views/login/p_records.html.erb
@@ -16,7 +16,7 @@
 </head>
 <div class="tab">
  
-  <button class="tablinks" onclick="window.location='/'">Home</button>
+  <button class="tablinks" onclick="window.location='ahome'">Home</button>
 
   <button class="tablinks" onclick="window.location='record'">Placement Record</button>
  
@@ -24,7 +24,7 @@
    
   <button class="tablinks" onclick="window.location='contact'">Contact Us</button>
 
-  <button class="tablinks" onclick="window.location='login'">Login</button>
+  <button class="tablinks" onclick="window.location='logout'">Logout</button>
 </div>
 <div>
 <!--p class="sign_in"><%#= link_to "Admin Login", new_user_session_path %>
