--- a/PMSystem/app/views/login/rhome.html.erb
+++ b/PMSystem/app/views/login/rhome.html.erb
@@ -16,7 +16,7 @@
 </head>
 <div class="tab">
  
-  <button class="tablinks" onclick="window.location='/'">Home</button>
+  <button class="tablinks" onclick="window.location='rhome'">Home</button>
 
   <button class="tablinks" onclick="window.location='record'">Placement record</button>
  
