Integrated the modules

--- a/PMSystem/app/views/addadmin/new.html.erb
+++ b/PMSystem/app/views/addadmin/new.html.erb
@@ -16,13 +16,21 @@
 </head>
 <div class="tab">
  
-  <button class="tablinks" onclick="window.location='/'">Home</button>
+  <button class="tablinks" onclick="window.location='/ahome'">Home</button>
 
   <button class="tablinks" onclick="window.location='record'">Add Records</button>
  
   <button class="tablinks" onclick="window.location='recr'">Add Recruiters</button>
    
   <button class="tablinks" onclick="window.location='/addadmin/new'">Add Admin</button>
+
+  <button class="tablinks" onclick="window.location='/manage_user/show'">Message</button>
+  
+  <button class="tablinks" onclick="window.location='/manage_user/show'">Manage Users</button>
+
+  <button class="tablinks" onclick="window.location='/current'">Manage Current Records</button>
+	
+  <button class="tablinks" onclick="window.location='/manage_user/new'">Manage Company Salary</button>	
 
   <button class="tablinks" onclick="window.location='/logout'">Logout</button>
 </div>
