--- a/PMSystem/app/views/login/shome.html.erb
+++ b/PMSystem/app/views/login/shome.html.erb
@@ -18,11 +18,11 @@
  
   <button class="tablinks" onclick="window.location='shome'">Home</button>
 
-  <button class="tablinks" onclick="window.location='record'">Placement Record</button>
+  <button class="tablinks" onclick="window.location='/show2'">Placement Record</button>
  
-  <button class="tablinks" onclick="window.location='recr'">Recruiters</button>
+  <button class="tablinks" onclick="window.location='mrshow2'">Recruiters</button>
    
-  <button class="tablinks" onclick="window.location='contact'">Notifications</button>
+  <button class="tablinks" onclick="window.location='/shownotification'">Notifications</button>
 
   <button class="tablinks" onclick="window.location='logout'">Logout</button>
 </div>
