--- a/PMSystem/app/views/welcome/index.html.erb
+++ b/PMSystem/app/views/welcome/index.html.erb
@@ -3,6 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
+	<meta HTTP-EQUIV="Pragma" CONTENT="no-cache">
 	<title>placementor</title>
 
 	<!-- Google Fonts -->
@@ -18,9 +19,9 @@
  
   <button class="tablinks" onclick="window.location='/'">Home</button>
 
-  <button class="tablinks" onclick="window.location='record'">Placement Record</button>
+  <button class="tablinks" onclick="window.location='/show1'">Placement Record</button>
  
-  <button class="tablinks" onclick="window.location='recr'">Recruiters</button>
+  <button class="tablinks" onclick="window.location='mrshow'">Recruiters</button>
    
   <button class="tablinks" onclick="window.location='contact'">Contact Us</button>
 
