--- a/PMSystem/app/views/manage_user/current.html.erb
+++ b/PMSystem/app/views/manage_user/current.html.erb
@@ -23,8 +23,14 @@
   <button class="tablinks" onclick="window.location='recr'">Add Recruiters</button>
    
   <button class="tablinks" onclick="window.location='/addadmin/new'">Add Admin</button>
+
+  <button class="tablinks" onclick="window.location='/manage_user/show'">Message</button>
   
-  <button class="tablinks" onclick="window.location='/manage_user/new'">Manage Users</button>
+  <button class="tablinks" onclick="window.location='/manage_user/show'">Manage Users</button>
+
+  <button class="tablinks" onclick="window.location='/current'">Manage Current Records</button>
+	
+  <button class="tablinks" onclick="window.location='/manage_user/new'">Manage Company Salary</button>	
 
   <button class="tablinks" onclick="window.location='/logout'">Logout</button>
 </div>
