Corrected the routes

--- a/PMSystem/app/views/login/contact.html.erb
+++ b/PMSystem/app/views/login/contact.html.erb
@@ -18,9 +18,9 @@
  
   <button class="tablinks" onclick="window.location='/'">Home</button>
 
-  <button class="tablinks" onclick="window.location='record'">Placement Record</button>
+  <button class="tablinks" onclick="window.location='/show1'">Placement Record</button>
  
-  <button class="tablinks" onclick="window.location='recr'">Recruiters</button>
+  <button class="tablinks" onclick="window.location='mrshow'">Recruiters</button>
    
   <button class="tablinks" onclick="window.location='contact'">Contact Us</button>
 
@@ -34,14 +34,19 @@
 
 <body>
 	<div class="container">
-		<div class="top">
+		<!--div class="top">
 			<h1 id="title" class="hidden"><span id="logo">Placementor</span></span></h1>
-		</div>
-		<!--div class="login-box animated fadeInUp">
+		</div-->
+		<div class="login-box animated fadeInUp">
 			<div class="box-header">
-				<h2>Log In</h2>
+				<h2>Contact Us</h2>
 			</div>
-			<label for="username">Username</label>
+			<center>
+			
+			<b>National Institute of Technology Calicut</b><br> 
+			<b>NIT Campus P.O 673 601</b><br> 
+			<b>Kozhikode, India</b><br>
+			<!--label for="username">Username</label>
 			<br/>
 			<input type="text" id="username">
 			<br/>
@@ -51,7 +56,8 @@
 			<br/>
 			<button type="submit">Sign In</button>
 			<br/>
-			<a href="#"><p class="small">Forgot your password?</p></a>
+			<a href="#"><p class="small">Forgot your password?</p></a-->
+			</center>
 		</div>
-	</div-->
+	</div>
 </body>
