--- a/PMSystem/app/views/login/l_index.html.erb
+++ b/PMSystem/app/views/login/l_index.html.erb
@@ -18,11 +18,11 @@
  
   <button class="tablinks" onclick="window.location='/'">Home</button>
 
-  <button class="tablinks" onclick="window.location='root'">Placement Record</button>
+  <button class="tablinks" onclick="window.location='/show1'">Placement Record</button>
  
-  <button class="tablinks" onclick="window.location='root'">Recruiters</button>
+  <button class="tablinks" onclick="window.location='mrshow'">Recruiters</button>
    
-  <button class="tablinks" onclick="window.location='root'">Contact Us</button>
+  <button class="tablinks" onclick="window.location='contact'">Contact Us</button>
 
   <button class="tablinks" onclick="window.location='login'">Login</button>
 </div>
