--- a/PMSystem/app/views/login/rhome.html.erb
+++ b/PMSystem/app/views/login/rhome.html.erb
@@ -34,14 +34,14 @@
 
 <body>
 	<div class="container">
-		<div class="top">
+		<!--div class="top">
 			<h1 id="title" class="hidden"><span id="logo">Placementor</span></span></h1>
-		</div>
-		<!--div class="login-box animated fadeInUp">
+		</div-->
+		<div class="login-box animated fadeInUp">
 			<div class="box-header">
-				<h2>Log In</h2>
+				<h2>Profile</h2>
 			</div>
-			<label for="username">Username</label>
+			<!--label for="username">Username</label>
 			<br/>
 			<input type="text" id="username">
 			<br/>
@@ -52,8 +52,8 @@
 			<button type="submit">Sign In</button>
 			<br/>
 			<a href="#"><p class="small">Forgot your password?</p></a>
-		</div-->
-	</div>
+		</div>
+	</div-->
 		<div>
 			<center>
 				<p>
