--- a/PMSystem/app/views/manage_recruiter/new.html.erb
+++ b/PMSystem/app/views/manage_recruiter/new.html.erb
@@ -16,7 +16,7 @@
 </head>
 <div class="tab">
  
-  <button class="tablinks" onclick="window.location='ahome'">Home</button>
+  <button class="tablinks" onclick="window.location='/ahome'">Home</button>
 
   <button class="tablinks" onclick="window.location='/placementrecords/new'">Add Records</button>
  
