--- a/PMSystem/app/views/manage_user/current.html.erb
+++ b/PMSystem/app/views/manage_user/current.html.erb
@@ -18,11 +18,13 @@
  
   <button class="tablinks" onclick="window.location='/ahome'">Home</button>
 
-  <button class="tablinks" onclick="window.location='record'">Add Records</button>
+  <button class="tablinks" onclick="window.location='/placementrecords/new'">Add Records</button>
  
-  <button class="tablinks" onclick="window.location='recr'">Add Recruiters</button>
+  <button class="tablinks" onclick="window.location='/manage_recruiter/new'">Add Recruiters</button>
    
   <button class="tablinks" onclick="window.location='/addadmin/new'">Add Admin</button>
+
+  <button class="tablinks" onclick="window.location='/notification/new'">Notification</button>
 
   <button class="tablinks" onclick="window.location='/manage_user/show'">Message</button>
   
