--- a/PMSystem/app/views/message/acompose.html.erb
+++ b/PMSystem/app/views/message/acompose.html.erb
@@ -24,6 +24,8 @@
    
   <button class="tablinks" onclick="window.location='/addadmin/new'">Add Admin</button>
 
+  <button class="tablinks" onclick="window.location='/notification/new'">Notification</button>
+
   <button class="tablinks" onclick="window.location='message_acompose'">Message</button>
   
   <button class="tablinks" onclick="window.location='/manage_user/show'">Manage Users</button>
@@ -32,7 +34,7 @@
 	
   <button class="tablinks" onclick="window.location='/manage_user/new'">Manage Company Salary</button>	
 
-  <button class="tablinks" onclick="window.location='logout'">Logout</button>
+  <button class="tablinks" onclick="window.location='/logout'">Logout</button>
 </div>
 <div>
 <!--p class="sign_in"><%#= link_to "Admin Login", new_user_session_path %>
