--- a/PMSystem/app/views/notification/new.html.erb
+++ b/PMSystem/app/views/notification/new.html.erb
@@ -16,15 +16,25 @@
 </head>
 <div class="tab">
  
-  <button class="tablinks" onclick="window.location='/'">Home</button>
+  <button class="tablinks" onclick="window.location='/ahome'">Home</button>
 
-  <button class="tablinks" onclick="window.location='root'">Placement Record</button>
+  <button class="tablinks" onclick="window.location='/placementrecords/new'">Add Records</button>
  
-  <button class="tablinks" onclick="window.location='root'">Recruiters</button>
-   
-  <button class="tablinks" onclick="window.location='root'">Contact Us</button>
+  <button class="tablinks" onclick="window.location='/manage_recruiter/new'">Add Recruiters</button>
 
-  <button class="tablinks" onclick="window.location='login'">Login</button>
+  <button class="tablinks" onclick="window.location='/notification/new'">Notification</button>
+   
+  <button class="tablinks" onclick="window.location='/addadmin/new'">Add Admin</button>
+
+  <button class="tablinks" onclick="window.location='message_acompose'">Message</button>
+  
+  <button class="tablinks" onclick="window.location='/manage_user/show'">Manage Users</button>
+
+  <button class="tablinks" onclick="window.location='/current'">Manage Current Records</button>
+	
+  <button class="tablinks" onclick="window.location='/manage_user/new'">Manage Company Salary</button>	
+
+  <button class="tablinks" onclick="window.location='logout'">Logout</button>
 </div>
 <!--div>
 <!--p class="sign_in"><%#= link_to "Admin Login", new_user_session_path %>
@@ -66,7 +76,7 @@
                 <% end %>
             </table>
   		</center>          
-            <%= link_to 'Back', notification_index_path %>|<%= link_to 'Appications', action:"eligible" %>
+            <%= link_to 'Back', notification_index_path %>|<%= link_to 'Appications', action:"eligible" %>|<%= link_to 'Notifications', notification_index_path %>
 		</div>
 	</div>
 </body>
