--- a/PMSystem/app/views/placementrecords/show3.html.erb
+++ b/PMSystem/app/views/placementrecords/show3.html.erb
@@ -19,10 +19,10 @@
   <button class="tablinks" onclick="window.location='rhome'">Home</button>
 
   <button class="tablinks" onclick="window.location='/show3'">Placement record</button>
-
-  <button class="tablinks" onclick="window.location='recr'">recruiters</button>
+ 
+  <button class="tablinks" onclick="window.location='mrshow3'">recruiters</button>
    
-  <button class="tablinks" onclick="window.location='contact'">Message</button>
+  <button class="tablinks" onclick="window.location='message_rcompose'">Message</button>
 
   <button class="tablinks" onclick="window.location='logout'">Logout</button>
 </div>
