--- a/PMSystem/app/views/shownotification/show.html.erb
+++ b/PMSystem/app/views/shownotification/show.html.erb
@@ -38,10 +38,10 @@
 			<div class="box-header">
 				<h2>  Notification </h2>
 			</div>
-			
-            <%= form_tag shownotification_index_path do %>
+		<center>	
+            	<%= form_tag shownotification_index_path do %>
 
-            <p> 
+           	 <p> 
                 <strong>Date: </strong>
                 <%= @n.date %><br>
 
@@ -50,16 +50,16 @@
                 
                 <strong>Content: </strong>
                 <%= @n.content %><br>
-            <% end %>    
-            <%= link_to 'Apply' ,action:"apply", id:@n.cin %>
-
-            </p>
-
-            
-
-            <%= link_to 'Back', shownotification_index_path %>
+            	<% end %>    
+            	<%= link_to 'Apply' ,action:"apply", id:@n.cin %>
+	
+            	</p>
 
             
+
+            	<%= link_to 'Back', shownotification_index_path %>
+
+            </center>
 		</div>
 	</div>
 </body>
