--- a/PMSystem/app/views/addadmin/new.html.erb
+++ b/PMSystem/app/views/addadmin/new.html.erb
@@ -18,13 +18,15 @@
  
   <button class="tablinks" onclick="window.location='/ahome'">Home</button>
 
-  <button class="tablinks" onclick="window.location='record'">Add Records</button>
+  <button class="tablinks" onclick="window.location='/placementrecords/new'">Add Records</button>
  
-  <button class="tablinks" onclick="window.location='recr'">Add Recruiters</button>
+  <button class="tablinks" onclick="window.location='/manage_recruiter/new'">Add Recruiters</button>
+
+  <button class="tablinks" onclick="window.location='/notification/new'">Notification</button>
    
   <button class="tablinks" onclick="window.location='/addadmin/new'">Add Admin</button>
 
-  <button class="tablinks" onclick="window.location='/manage_user/show'">Message</button>
+  <button class="tablinks" onclick="window.location='/message_acompose'">Message</button>
   
   <button class="tablinks" onclick="window.location='/manage_user/show'">Manage Users</button>
 
@@ -34,7 +36,7 @@
 
   <button class="tablinks" onclick="window.location='/logout'">Logout</button>
 </div>
-<!--div>
+<!--div>/
 <!--p class="sign_in"><%#= link_to "Admin Login", new_user_session_path %>
 
 
