--- a/PMSystem/app/views/login/ahome.html.erb
+++ b/PMSystem/app/views/login/ahome.html.erb
@@ -44,14 +44,14 @@
 
 <body>
 	<div class="container">
-		<div class="top">
+		<!--div class="top">
 			<h1 id="title" class="hidden"><span id="logo">Placementor</span></span></h1>
-		</div>
-		<!--div class="login-box animated fadeInUp">
+		</div-->
+		<div class="login-box animated fadeInUp">
 			<div class="box-header">
-				<h2>Log In</h2>
+				<h2>Profle</h2>
 			</div>
-			<label for="username">Username</label>
+			<!--label for="username">Username</label>
 			<br/>
 			<input type="text" id="username">
 			<br/>
