--- a/PMSystem/app/views/message/show.html.erb
+++ b/PMSystem/app/views/message/show.html.erb
@@ -24,6 +24,8 @@
    
   <button class="tablinks" onclick="window.location='/addadmin/new'">Add Admin</button>
 
+  <button class="tablinks" onclick="window.location='/notification/new'">Notification</button>
+
   <button class="tablinks" onclick="window.location='message_acompose'">Message</button>
   
   <button class="tablinks" onclick="window.location='/manage_user/show'">Manage Users</button>
