--- a/PMSystem/app/views/placementrecords/new.html.erb
+++ b/PMSystem/app/views/placementrecords/new.html.erb
@@ -20,9 +20,11 @@
 
   <button class="tablinks" onclick="window.location='/placementrecords/new'">Add Records</button>
  
-  <button class="tablinks" onclick="window.location='recr'">Add Recruiters</button>
+  <button class="tablinks" onclick="window.location='/manage_recruiter/new'">Add Recruiters</button>
    
   <button class="tablinks" onclick="window.location='/addadmin/new'">Add Admin</button>
+
+  <button class="tablinks" onclick="window.location='/notification/new'">Notification</button>
 
   <button class="tablinks" onclick="window.location='/manage_user/show'">Message</button>
   
