--- a/PMSystem/app/views/placementrecords/show2.html.erb
+++ b/PMSystem/app/views/placementrecords/show2.html.erb
@@ -16,15 +16,15 @@
 </head>
 <div class="tab">
  
-  <button class="tablinks" onclick="window.location='/'">Home</button>
+  <button class="tablinks" onclick="window.location='shome'">Home</button>
 
   <button class="tablinks" onclick="window.location='/show2'">Placement Record</button>
  
-  <button class="tablinks" onclick="window.location='recr'">Recruiters</button>
+  <button class="tablinks" onclick="window.location='mrshow2'">Recruiters</button>
    
-  <button class="tablinks" onclick="window.location='contact'">Contact Us</button>
+  <button class="tablinks" onclick="window.location='/shownotification'">Notifications</button>
 
-  <button class="tablinks" onclick="window.location='/logout'">Logout</button>
+  <button class="tablinks" onclick="window.location='logout'">Logout</button>
 </div>
 <div>
 <!--p class="sign_in"><%#= link_to "Admin Login", new_user_session_path %>
