--- a/PMSystem/app/views/shownotification/index.html.erb
+++ b/PMSystem/app/views/shownotification/index.html.erb
@@ -16,15 +16,15 @@
 </head>
 <div class="tab">
  
-  <button class="tablinks" onclick="window.location='/'">Home</button>
+  <button class="tablinks" onclick="window.location='shome'">Home</button>
 
-  <button class="tablinks" onclick="window.location='root'">Placement Record</button>
+  <button class="tablinks" onclick="window.location='/show2'">Placement Record</button>
  
-  <button class="tablinks" onclick="window.location='root'">Recruiters</button>
+  <button class="tablinks" onclick="window.location='mrshow2'">Recruiters</button>
    
-  <button class="tablinks" onclick="window.location='root'">Contact Us</button>
+  <button class="tablinks" onclick="window.location='/shownotification'">Notifications</button>
 
-  <button class="tablinks" onclick="window.location='login'">Login</button>
+  <button class="tablinks" onclick="window.location='logout'">Logout</button>
 </div>
 <!--div>
 <!--p class="sign_in"><%#= link_to "Admin Login", new_user_session_path %>
@@ -39,7 +39,7 @@
 				<h2> Notification </h2>
 			</div>
 			
-            
+            <center>
 
             <table>
                 <tr>
@@ -57,7 +57,7 @@
                 <% end %>
 
             </table>
-
+		</center>
 		</div>
 	</div>
 </body>
