--- a/PMSystem/app/views/login/ahome.html.erb
+++ b/PMSystem/app/views/login/ahome.html.erb
@@ -49,7 +49,7 @@
 		</div-->
 		<div class="login-box animated fadeInUp">
 			<div class="box-header">
-				<h2>Profle</h2>
+				<h2>Welcome Admin</h2>
 			</div>
 			<!--label for="username">Username</label>
 			<br/>
@@ -64,20 +64,20 @@
 			<a href="#"><p class="small">Forgot your password?</p></a>
 		</div>
 	</div-->
-		<div>
+		<!--div>
 			<center>
 				<p>
   					<strong>Employee Number:</strong>
-  					<%= @admin.empid %>
+  					<%#= @admin.empid %>
 				</p>
 				<p>
   					<strong>Name:</strong>
-  					<%= @admin.name %>
+  					<%#= @admin.name %>
 				</p>
 				<p>
   					<strong>Contact:</strong>
-  					<%= @admin.contact %>
+  					<%#= @admin.contact %>
 				</p>
 			</center>
-		</div>
+		</div-->
 </body>
