--- a/PMSystem/app/views/notification/new.html.erb
+++ b/PMSystem/app/views/notification/new.html.erb
@@ -26,7 +26,7 @@
    
   <button class="tablinks" onclick="window.location='/addadmin/new'">Add Admin</button>
 
-  <button class="tablinks" onclick="window.location='message_acompose'">Message</button>
+  <button class="tablinks" onclick="window.location='/message_acompose'">Message</button>
   
   <button class="tablinks" onclick="window.location='/manage_user/show'">Manage Users</button>
 
