--- a/PMSystem/app/views/placementrecords/show1.html.erb
+++ b/PMSystem/app/views/placementrecords/show1.html.erb
@@ -20,7 +20,7 @@
 
   <button class="tablinks" onclick="window.location='/show1'">Placement Record</button>
  
-  <button class="tablinks" onclick="window.location='recr'">Recruiters</button>
+  <button class="tablinks" onclick="window.location='/mrshow'">Recruiters</button>
    
   <button class="tablinks" onclick="window.location='contact'">Contact Us</button>
 
