--- a/PMSystem/app/assets/stylesheets/style.css
+++ b/PMSystem/app/assets/stylesheets/style.css
@@ -45,10 +45,10 @@ div.tab button.active {
 /* Typography */
 h1#title {
 	font-family: 'Roboto Slab', serif;
-	font-weight: 300;
+	font-weight: 450;
 	font-size: 3.2em;
 	color: white;
-	text-shadow: 0 0 10px rgba(0,0,0,0.8);
+	text-shadow: 0 0 10px rgba(0,0,0,1.4);
 	margin: 0 auto;
 	padding-top: 180px;
 	max-width: 300px;
@@ -320,4 +320,7 @@ p.small {
   background-image :      -o-linear-gradient(rgb(179,217,140),rgb(153,204,102));
   background-image : -webkit-linear-gradient(rgb(179,217,140),rgb(153,204,102));
   background-image :         linear-gradient(rgb(179,217,140),rgb(153,204,102));
+}
+img{
+   border-radius: 50%;
 }
