--- a/PMSystem/app/views/layouts/application.html.erb
+++ b/PMSystem/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
   <body>
 	<% flash.each do |key, value| %>
-        <div class="alert alert-<%= key %>"><%= value %></div>
+        <div class="alert alert-<%= key %>"><h1><%= value %></h1></div>
       <% end %>
     <%= yield %>
   </body>
