--- a/PMSystem/app/views/manage_recruiter/show.html.erb
+++ b/PMSystem/app/views/manage_recruiter/show.html.erb
@@ -16,15 +16,15 @@
 </head>
 <div class="tab">
  
-  <button class="tablinks" onclick="window.location='shome'">Home</button>
+  <button class="tablinks" onclick="window.location='/'">Home</button>
 
-  <button class="tablinks" onclick="window.location='/show2'">Placement Record</button>
+  <button class="tablinks" onclick="window.location='/show'">Placement Record</button>
  
-  <button class="tablinks" onclick="window.location='mrshow2'">Recruiters</button>
+  <button class="tablinks" onclick="window.location='mrshow'">Recruiters</button>
    
-  <button class="tablinks" onclick="window.location='/shownotification'">Notifications</button>
+  <button class="tablinks" onclick="window.location='/contact'">Contact us</button>
 
-  <button class="tablinks" onclick="window.location='logout'">Logout</button>
+  <button class="tablinks" onclick="window.location='/login'">Login</button>
 </div>
 <div>
 <!--p class="sign_in"><%#= link_to "Admin Login", new_user_session_path %>
@@ -58,7 +58,7 @@
 			<center>
 				<% @up.each do |x| %>
 	<center>
-	<table border="1" width='30%'>
+	<table>
 
 		<tr>
 	    	<td width='50%'>
