--- a/PMSystem/app/views/sregister/new.html.erb
+++ b/PMSystem/app/views/sregister/new.html.erb
@@ -18,13 +18,13 @@
  
   <button class="tablinks" onclick="window.location='/'">Home</button>
 
-  <button class="tablinks" onclick="window.location='root'">Placement Record</button>
+  <button class="tablinks" onclick="window.location='/show1'">Placement Record</button>
  
-  <button class="tablinks" onclick="window.location='root'">Recruiters</button>
+  <button class="tablinks" onclick="window.location='/mrshow'">Recruiters</button>
    
-  <button class="tablinks" onclick="window.location='root'">Contact Us</button>
+  <button class="tablinks" onclick="window.location='/contact'">Contact Us</button>
 
-  <button class="tablinks" onclick="window.location='login'">Login</button>
+  <button class="tablinks" onclick="window.location='/login'">Login</button>
 </div>
 <!--div>
 <!--p class="sign_in"><%#= link_to "Admin Login", new_user_session_path %>
